...
                                <color key="backgroundColor" red="0.30840110780000002" green="0.5618229508" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" name="Courier" family="Courier" pointSize="35"/>
                                <state key="normal" title="ENTER">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                <rect key="frame" x="25" y="266" width="325" height="101"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleAspectFit" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Enter product name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gsQ-Te-cv3">
                                        <rect key="frame" x="0.0" y="0.0" width="325" height="64"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                        <color key="backgroundColor" red="0.30840110780000002" green="0.5618229508" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" name="Courier-Bold" family="Courier" pointSize="25"/>
                                        <state key="normal" title="SUBMIT">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                <color key="shadowColor" cocoaTouchSystemColor="lightTextColor"/>
                            </label>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sad orangutan 1" translatesAutoresizingMaskIntoConstraints="NO" id="r2d-EQ-pIp">
                                <rect key="frame" x="0.0" y="355" width="375" height="312"/>
                            </imageView>
                            <imageView clipsSubviews="YES" clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sad orangutan 2" translatesAutoresizingMaskIntoConstraints="NO" id="HY2-Ma-Ojm">
                                <rect key="frame" x="0.0" y="175" width="375" height="292"/>
                            </imageView>
...
                                <state key="normal">
                                    <attributedString key="attributedTitle">
                                        <fragment content="FIND OUT MORE">
                                            <attributes>
                                                <color key="NSColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" name="Courier-Bold" family="Courier" pointSize="20"/>
                                        <state key="normal" title="READ MORE ...">
                                            <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                <color key="backgroundColor" red="0.30840110780000002" green="0.5618229508" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" name="Courier-Bold" family="Courier" pointSize="25"/>
                                <state key="normal" title="ENTER ANOTHER PRODUCT">
                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="happy orangutan 1" translatesAutoresizingMaskIntoConstraints="NO" id="bxW-bL-enB">
                                <rect key="frame" x="0.0" y="219" width="375" height="254"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="confused orangutan" translatesAutoresizingMaskIntoConstraints="NO" id="92z-bd-2an">
                                <rect key="frame" x="0.0" y="232" width="375" height="240"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
